Stats and URLs
Updated URL to URI and started work on stat calculations with nature Enums.